Added new dashboard with dropdown
Added new dashboard with dropdown that uses the same logic as the usages tab on the document page type.
