# src/Pixelbuilders.Umbraco.ElementFinder.Core/Models/Elements.cs
@@ -1,0 +1,8 @@
+﻿namespace Pixelbuilders.Umbraco.ElementFinder.Core.Models
+{
+    public class Elements
+    {
+        public string Name { get; set; }
+        public string Alias { get; set; }
+    }
+}
