# src/Pixelbuilders.Umbraco.Package/swagger.json
@@ -5,6 +5,64 @@
     "version": "1.0"
   },
   "paths": {
+    "/umbraco/element-finder/api/v1/all-types": {
+      "get": {
+        "tags": [
+          "v1"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Elements"
+                      }
+                    ]
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Elements"
+                      }
+                    ]
+                  }
+                }
+              },
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "oneOf": [
+                      {
+                        "$ref": "#/components/schemas/Elements"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "The resource is protected and requires an authentication token"
+          }
+        },
+        "security": [
+          {
+            "Backoffice-User": [ ]
+          }
+        ]
+      }
+    },
     "/umbraco/element-finder/api/v1/usage/{alias}": {
       "get": {
         "tags": [
@@ -82,6 +140,22 @@
             "type": "string"
           },
           "id": {
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
+      "Elements": {
+        "required": [
+          "alias",
+          "name"
+        ],
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "alias": {
             "type": "string"
           }
         },
